--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 <body>
     <div class="container">
         <div class="logo">
-            <img src="logo.png" alt="Pust Logo">
+            <img src="Logo.png" alt="Pust Logo">
         </div>
         <h1>Welcome to Pust</h1>
         <p>A Rust-Inspired Programming Language</p>
