--- a/index.html
+++ b/index.html
@@ -101,30 +101,31 @@
                 case 'github':
                     content.innerHTML = `
                         <strong>GitHub</strong>
-                        <p>Find the source code and contribute to the Pust project on our <a href='https://github.com/pust-lang/pust'>GitHub repository</a>.<br> <br> </p>
+                        <p>Find the source code and contribute to the Pust project on our <a href='https://github.com/pust-lang/pust'>GitHub repository</a>.<br><br></p>
                     `;
+                    break; // Added break here
                 case 'update':
                     content.innerHTML = `
                         <strong>Update log:</strong>
-                        <p>Added wo("") to open websites with the url inbetween.<br> <br> </p>
+                        <p>Added wo("") to open websites with the URL in between.<br><br></p>
                     `;
                     break;
                 case 'readme':
                     content.innerHTML = `
                         <strong>README</strong>
-                        <p>Learn more about Pust, its features, and usage in the <a href='https://github.com/pust-lang/pust#readme'>README file</a>.<br> <br> </p>
+                        <p>Learn more about Pust, its features, and usage in the <a href='https://github.com/pust-lang/pust#readme'>README file</a>.<br><br></p>
                     `;
                     break;
                 case 'license':
                     content.innerHTML = `
                         <strong>License</strong>
-                        <p>  License Summary - Permissions: You are free to use, modify, and distribute the code, including for commercial purposes. Restrictions: You may not create works that confuse or mislead others by replicating or associating the code with the original project or creator. <br><br> View the full license <a href='https://github.com/pust-lang/pust/blob/main/LICENSE'>here</a>.<br> <br> </p>
+                        <p>License Summary - Permissions: You are free to use, modify, and distribute the code, including for commercial purposes. Restrictions: You may not create works that confuse or mislead others by replicating or associating the code with the original project or creator.<br><br>View the full license <a href='https://github.com/pust-lang/pust/blob/main/LICENSE'>here</a>.<br><br></p>
                     `;
                     break;
                 case 'about':
                     content.innerHTML = `
                         <strong>About</strong>
-                        <p>Pust is a programming language that takes inspiration from Rust but focuses on simplicity and usefullnes, it is slowly getting into a software development tool and a usefull programming language.<br> <br> </p>
+                        <p>Pust is a programming language that takes inspiration from Rust but focuses on simplicity and usefulness. It is slowly evolving into a software development tool and a useful programming language.<br><br></p>
                     `;
                     break;
             }
@@ -153,7 +154,7 @@
         </div>
 
         <footer>
-            &copy; 2025 - present, The Pust Language | Designed for software engineering and simplicity. <br> 
+            &copy; 2025 - present, The Pust Language | Designed for software engineering and simplicity.<br>
         </footer>
     </div>
 </body>
