--- a/index.html
+++ b/index.html
@@ -103,11 +103,11 @@
                         <strong>GitHub</strong>
                         <p>Find the source code and contribute to the Pust project on our <a href='https://github.com/pust-lang/pust'>GitHub repository</a>.<br><br></p>
                     `;
-                    break; // Added break here
+                    break;
                 case 'update':
                     content.innerHTML = `
                         <strong>Update log:</strong>
-                        <p>Added wo("") to open websites with the URL in between.<br><br></p>
+                        <p>Package creator or Gopust in development, Pust will be get small updates to make it even more useful untill we can create Gopust.<br><br></p>
                     `;
                     break;
                 case 'readme':
@@ -125,7 +125,7 @@
                 case 'about':
                     content.innerHTML = `
                         <strong>About</strong>
-                        <p>Pust is a programming language that takes inspiration from Rust but focuses on simplicity and usefulness. It is slowly evolving into a software development tool and a useful programming language.<br><br></p>
+                        <p>Pust is a programming language that takes inspiration from Rust but focuses on simplicity and usefulness. Its an Rust inspired programming language.<br><br></p>
                     `;
                     break;
             }
