--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pust - A Rust-Inspired Language</title>
+    <title>Pust Programming Lang.</title>
     <style>
         :root {
             --bg-color: #121212;
