--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 case 'update':
                     content.innerHTML = `
                         <strong>Update log:</strong>
-                        <p>Package creator or Gopust in development, Pust will be get small updates to make it even more useful untill we can create Gopust.<br><br></p>
+                        <p>Added Loops, read README.md for more info<br><br></p>
                     `;
                     break;
                 case 'readme':
