--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pust The Programming Lang.</title>
+    <title>Pust: The Programming Language</title>
     <style>
         :root {
             --bg-color: #121212;
@@ -31,7 +31,7 @@
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
-            max-width: 600px;
+            max-width: 900px;
             width: 100%;
         }
 
@@ -45,24 +45,13 @@
         }
 
         h1 {
-            font-size: 2em;
+            font-size: 2.5em;
             margin-bottom: 10px;
         }
 
-        .sections {
-            margin-top: 20px;
-        }
-
-        .section {
-            margin: 15px 0;
+        p {
             font-size: 1.1em;
-            line-height: 1.6;
-        }
-
-        footer {
-            margin-top: 20px;
-            font-size: 0.9em;
-            color: var(--footer-color);
+            margin-bottom: 20px;
         }
 
         .nav {
@@ -72,16 +61,29 @@
         .nav button {
             margin: 0 10px;
             padding: 10px 15px;
-            font-size: 1em;
+            font-size: 1.1em;
             color: var(--text-color);
             background-color: var(--button-bg);
             border: none;
             border-radius: 5px;
             cursor: pointer;
+            transition: background-color 0.3s ease;
         }
 
         .nav button:hover {
             background-color: var(--button-hover-bg);
+        }
+
+        .sections {
+            margin-top: 20px;
+            font-size: 1.1em;
+            line-height: 1.6;
+        }
+
+        footer {
+            margin-top: 30px;
+            font-size: 0.9em;
+            color: var(--footer-color);
         }
 
         a {
@@ -92,6 +94,7 @@
         a:hover {
             text-decoration: underline;
         }
+
     </style>
     <script>
         function showSection(section) {
@@ -104,9 +107,15 @@
                         <p>Find the source code and contribute to the Pust project on our <a href='https://github.com/pust-lang/pust'>GitHub repository</a>.<br><br></p>
                     `;
                     break;
+                case 'course':
+                    content.innerHTML = `
+                        <strong>Course</strong>
+                        <p>Learn more about Pust through the <a href="course.html">Pust course</a>.<br><br></p>
+                    `;
+                    break;
                 case 'update':
                     content.innerHTML = `
-                        <strong>Update log:</strong>
+                        <strong>Update Log</strong>
                         <p>Added Loops, read README.md for more info<br><br></p>
                     `;
                     break;
@@ -119,13 +128,13 @@
                 case 'license':
                     content.innerHTML = `
                         <strong>License</strong>
-                        <p>License Summary - Permissions: You are free to use, modify, and distribute the code, including for commercial purposes. Restrictions: You may not create works that confuse or mislead others by replicating or associating the code with the original project or creator.<br><br>View the full license <a href='https://github.com/pust-lang/pust/blob/main/LICENSE'>here</a>.<br><br></p>
+                        <p>License Summary - Permissions: You are free to use, modify, and distribute the code, including for commercial purposes. Restrictions: You may not create works that confuse or mislead others by replicating or misrepresenting the project.<br><br>View the full license <a href='https://github.com/pust-lang/pust/blob/main/LICENSE'>here</a>.<br><br></p>
                     `;
                     break;
                 case 'about':
                     content.innerHTML = `
                         <strong>About</strong>
-                        <p>Pust is a programming language that takes inspiration from Rust but focuses on simplicity and usefulness. Its an Rust inspired programming language.<br><br></p>
+                        <p>Pust is a programming language inspired by Rust, focusing on simplicity and usability.<br><br></p>
                     `;
                     break;
             }
@@ -142,6 +151,7 @@
 
         <div class="nav">
             <button onclick="showSection('github')">GitHub</button>
+            <button onclick="showSection('course')">Course</button>
             <button onclick="showSection('update')">Update Log</button>
             <button onclick="showSection('readme')">README</button>
             <button onclick="showSection('license')">License</button>
@@ -154,7 +164,7 @@
         </div>
 
         <footer>
-            &copy; 2025 - present, The Pust Language | Designed for software engineering and simplicity.<br>
+            &copy; 2025 - present, The Pust Language | Designed for usefulness and simplicity.<br>
         </footer>
     </div>
 </body>
