--- a/course.html
+++ b/course.html
@@ -104,13 +104,13 @@
                 case 'Mainspace':
                     content.innerHTML = `
                         <h2>Mainspace</h2>
-                        <p>Mainspace is where you can write your code without the need for the <code>ps</code> prefix. For example: <code>p.fn("main", """pln("my coding space")"""</code>. Functions cannot be created here, but they can be called.</p>
+                        <p>Mainspace is where you can write your code without the need for the <code>ps</code> prefix. For example: <code>yr.fn("main", """pln("my coding space")"""</code>. Functions cannot be created here, but they can be called.</p>
                     `;
                     break;
                 case 'Print':
                     content.innerHTML = `
                         <h2>Print</h2>
-                        <p>To print output, use <code>pln("message")</code>. If you are not in the mainspace, use <code>ps.pln("message")</code>, like the ps. every line.</p>
+                        <p>To print output, use <code>pln("message")</code>. If you are not in the mainspace, use <code>ps.pln("message")</code>, like the yr. every line.</p>
                     `;
                     break;
                 case 'Input':
@@ -122,7 +122,7 @@
                 case 'If Statement':
                     content.innerHTML = `
                         <h2>If Statement</h2>
-                        <p>To use an if statement, use the format: <code>ps.if_stmt("variable", "value", ['pln("True!")'], ['pln("else")'])</code>. The else part is optional.</p>
+                        <p>To use an if statement, use the format: <code>yr.if_stmt("variable", "value", ['pln("True!")'], ['pln("else")'])</code>. The else part is optional.</p>
                     `;
                     break;
                 case 'Button':
@@ -192,7 +192,7 @@
 <body>
     <div class="container">
         <div class="logo">
-            <img src="Logo.png" alt="Pust Logo">
+            <img src="lg.png" alt="Year Logo">
         </div>
         <h1>Welcome to Pust</h1>
         <p>A Rust-Inspired Programming Language</p>
@@ -216,11 +216,11 @@
 
         <div class="sections" id="content">
             <strong>Welcome!</strong>
-            <p>Select a section to learn more about Pust.</p>
+            <p>Select a section to learn more about Year.</p>
         </div>
 
         <footer>
-            &copy; 2025 - present, The Pust Language | Designed for usefulness and simplicity.<br>
+            &copy; 2025 - present, The Year Language | Designed for usefulness and simplicity.<br>
         </footer>
     </div>
 </body>
