--- a/course.html
+++ b/course.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Year Programming Language</title>
+    <title>The PiStud Programming Language</title>
     <style>
         :root {
             --bg-color: #121212;
@@ -104,13 +104,13 @@
                 case 'Mainspace':
                     content.innerHTML = `
                         <h2>Mainspace</h2>
-                        <p>Mainspace is where you can write your code without the need for the <code>ps</code> prefix. For example: <code>yr.fn("main", """pln("my coding space")"""</code>. Functions cannot be created here, but they can be called.</p>
+                        <p>Mainspace is where you can write your code without the need for the <code>ps</code> prefix. For example: <code>ps.fn("main", """pln("my coding space")"""</code>. Functions cannot be created here, but they can be called.</p>
                     `;
                     break;
                 case 'Print':
                     content.innerHTML = `
                         <h2>Print</h2>
-                        <p>To print output, use <code>pln("message")</code>. If you are not in the mainspace, use <code>ps.pln("message")</code>, like the yr. every line.</p>
+                        <p>To print output, use <code>pln("message")</code>. If you are not in the mainspace, use <code>ps.pln("message")</code>, like the ps. every line.</p>
                     `;
                     break;
                 case 'Input':
@@ -122,7 +122,7 @@
                 case 'If Statement':
                     content.innerHTML = `
                         <h2>If Statement</h2>
-                        <p>To use an if statement, use the format: <code>yr.if_stmt("variable", "value", ['pln("True!")'], ['pln("else")'])</code>. The else part is optional.</p>
+                        <p>To use an if statement, use the format: <code>ps.if_stmt("variable", "value", ['pln("True!")'], ['pln("else")'])</code>. The else part is optional.</p>
                     `;
                     break;
                 case 'Button':
@@ -146,7 +146,7 @@
                 case 'Py':
                     content.innerHTML = `
                         <h2>Py</h2>
-                        <p>To run Python code in Pust, use the format: <code>py("python code")</code>.</p>
+                        <p>To run Python code in PiStud, use the format: <code>py("python code")</code>.</p>
                     `;
                     break;
                 case 'Os':
