--- a/course.html
+++ b/course.html
@@ -192,9 +192,9 @@
 <body>
     <div class="container">
         <div class="logo">
-            <img src="lg.png" alt="Year Logo">
+            <img src="l.png" alt="Year Logo">
         </div>
-        <h1>Welcome to Pust</h1>
+        <h1>Welcome to PiStud</h1>
         <p>A Rust-Inspired Programming Language</p>
 
         <div class="nav">
@@ -216,11 +216,11 @@
 
         <div class="sections" id="content">
             <strong>Welcome!</strong>
-            <p>Select a section to learn more about Year.</p>
+            <p>Select a section to learn more about PiStud.</p>
         </div>
 
         <footer>
-            &copy; 2025 - present, The Year Language | Designed for usefulness and simplicity.<br>
+            &copy; 2025 - present, The PiStud Language | Designed for usefulness and simplicity.<br>
         </footer>
     </div>
 </body>
