--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pust: The Programming Language</title>
+    <title>The PiStud Programming Language</title>
     <style>
         :root {
             --bg-color: #121212;
@@ -104,13 +104,13 @@
                 case 'github':
                     content.innerHTML = `
                         <strong>GitHub</strong>
-                        <p>Find the source code and contribute to the year project on our <a href='https://github.com/year-lang/pust'>GitHub repository</a>.<br><br></p>
+                        <p>Find the source code and contribute to the PiStud project on our <a href='https://github.com/year-lang/pust'>GitHub repository</a>.<br><br></p>
                     `;
                     break;
                 case 'course':
                     content.innerHTML = `
                         <strong>Course</strong>
-                        <p>Learn more about Pust through the <a href="course.html">Year course</a>.<br><br></p>
+                        <p>Learn more about PiStud through the <a href="course.html">Year course</a>.<br><br></p>
                     `;
                     break;
                 case 'update':
@@ -122,7 +122,7 @@
                 case 'readme':
                     content.innerHTML = `
                         <strong>README</strong>
-                        <p>Learn more about Year, its features, and usage in the <a href='https://github.com/year-lang/pust#readme'>README file</a>.<br><br></p>
+                        <p>Learn more about PiStud, its features, and usage in the <a href='https://github.com/year-lang/pust#readme'>README file</a>.<br><br></p>
                     `;
                     break;
                 case 'license':
@@ -134,7 +134,7 @@
                 case 'about':
                     content.innerHTML = `
                         <strong>About</strong>
-                        <p>Year is a programming language inspired by Rust, focusing on simplicity and usability.<br><br></p>
+                        <p>PiStud is a programming language inspired by Rust, focusing on simplicity and usability.<br><br></p>
                     `;
                     break;
             }
@@ -144,7 +144,7 @@
 <body>
     <div class="container">
         <div class="logo">
-            <img src="lg.png" alt="Year Logo">
+            <img src="l.png" alt="PiStud Logo">
         </div>
         <h1>Welcome to Pust</h1>
         <p>A Rust-Inspired Programming Language</p>
@@ -160,11 +160,11 @@
 
         <div class="sections" id="content">
             <strong>Welcome!</strong>
-            <p>Select a section to learn more about Pust.</p>
+            <p>Select a section to learn more about PiStud.</p>
         </div>
 
         <footer>
-            &copy; 2025 - present, The Year Language | Designed for usefulness and simplicity.<br>
+            &copy; 2025 - present, The PiStud Language | Designed for usefulness and simplicity.<br>
         </footer>
     </div>
 </body>
