--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         <div class="logo">
             <img src="l.png" alt="PiStud Logo">
         </div>
-        <h1>Welcome to Pust</h1>
+        <h1>Welcome to PiStud</h1>
         <p>A Rust-Inspired Programming Language</p>
 
         <div class="nav">
