--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 case 'course':
                     content.innerHTML = `
                         <strong>Course</strong>
-                        <p>Learn more about PiStud through the <a href="course.html">Year course</a>.<br><br></p>
+                        <p>Learn more about PiStud through the <a href="course.html">PiStud course</a>.<br><br></p>
                     `;
                     break;
                 case 'update':
