--- a/course.html
+++ b/course.html
@@ -170,7 +170,7 @@
                 case 'Variables':
                     content.innerHTML = `
                         <h2>Variables</h2>
-                        <p>To create a variable, use: <code>cv("VariableName", "Value")</code>. You can then use the variable in your code, such as in print statements: <code>pln("Variable name: {VariableName}, thats the name", "VariableName")</code>.</p>
+                        <p>To create a variable, use: <code>let("VariableName", "Value")</code>. You can then use the variable in your code, such as in print statements: <code>pln("Variable name: {VariableName}, thats the name", "VariableName")</code>.</p>
                     `;
                     break;
                 case 'Message Box':
