--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 case 'github':
                     content.innerHTML = `
                         <strong>GitHub</strong>
-                        <p>Find the source code and contribute to the PiStud project on our <a href='https://github.com/year-lang/pust'>GitHub repository</a>.<br><br></p>
+                        <p>Find the source code and contribute to the PiStud project on our <a href='https://github.com/pistud-lang/pistud'>GitHub repository</a>.<br><br></p>
                     `;
                     break;
                 case 'course':
